# object_storage_app

./: .gitignore  README.md  pyproject.toml
metadata_store/: api.py  app.py  asgi.py  backend.py  exeptions.py  store.py
tests/: .gitignore  conftest.py  test_local.py  test_metadata.py  test_web.py
