[tool.poetry]
name = "object-storage-app"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "object_storage_app"}]

[tool.poetry.dependencies]
python = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.pytest.ini_options]
filterwarnings = [
    # "error",
    "ignore::trio.TrioDeprecationWarning",
    # note the use of single quote below to denote "raw" strings in TOML
    # 'ignore:function ham\(\) is deprecated:DeprecationWarning',
]
