[tool.poetry]
name = "object-storage-app"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "object_storage_app"}]

[tool.poetry.dependencies]
python = "^3.8"
boto3 = "^1.26.121"
pandas = "^2.0.1"
pyarrow = "^11.0.0"
h5py = "^3.8.0"
tantivy = "^0.13.2"
hyperdb-python = "^0.1.2"
svn = "^1.0.1"
aiofiles = "^23.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.pytest.ini_options]
filterwarnings = [
    # "error",
    "ignore::trio.TrioDeprecationWarning",
    # note the use of single quote below to denote "raw" strings in TOML
    # 'ignore:function ham\(\) is deprecated:DeprecationWarning',
]
